--- a/fproject.css
+++ b/fproject.css
@@ -82,6 +82,7 @@ header.navbar a{
         color:#fff;
         font-size: 2rem;
         margin:0. 8rem;
+        text-decoration-color: white;
 }
 header.navbar a:hover{
         color:var(--orange);
@@ -97,14 +98,13 @@ header .icons i:hover{
 }
 header .search-bar-container{
         position: absolute;
-        top:100%; left:0; right:0;
-        padding:1.5rem 2rem;
+        width: 20%;
+        margin-left: 70%;
         background:#333;
         border-top: .1rem solid rgba(255,255,255,.2);
         display:flex;
         align-items: center;
         z-index: 1001;
-        clip-path: polygon(0 0,100% 0,100% 0,0 0);
 }
 header.search-bar-container.active{
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
@@ -130,7 +130,7 @@ header.search-bar-container label:hover{
         top:-120%; left :0;
         min-height: 100vh;
         width: 100%;
-        background: rgba(0,0,0,.7);
+        background: rgba(0, 0, 0, 0.7);
         display: flex;
         align-items:center;
         justify-content: center;
@@ -519,49 +519,6 @@ header.search-bar-container label:hover{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 body{
         height: 300 rem; 
 }
@@ -618,6 +575,7 @@ section{
         }
 
 }
+
 
 
 
